# EBAC-repository

./: 00-design.xd  README.md  exercicio1_ebac.txt  exercicioModulo13.docx
HTML/: 01-introducao.html  02-listas-e-links.html  03-formatacao-de-texto.html  04-tabelas.html  05-layouts.html  06-formularios.html  06-sobre.html  exercicio.html  exercicioCodeTogether.html  homepage.html
HTML/M8/: elementos-graficos.html  layouts-fluidos.html
HTML/css/: graficos.css  layout.css  style.css  styleCodeTogether.css
JavaScript/html/: funcoes.html
V2_curso/: .gitignore  exercicio_formulario.html  package.json
V2_curso/HTML/: dom.html  (+6 more)
V2_curso/django_project/: db.sqlite3  pyproject.toml
V2_curso/django_project/bookstore/: settings.py  urls.py
V2_curso/django_project/order/: factories.py
V2_curso/django_project/order/migrations/: 0001_initial.py
V2_curso/django_project/order/models/: order.py
V2_curso/django_project/order/serializers/: order_serializer.py
V2_curso/django_project/order/tests/: test_order_viewset.py
V2_curso/django_project/order/viewsets/: order_viewset.py
V2_curso/django_project/product/: factories.py
V2_curso/django_project/product/migrations/: 0001_initial.py  0002_rename_activate_category_active.py  0003_rename_categories_product_category.py
V2_curso/django_project/product/models/: category.py  product.py
V2_curso/django_project/product/serializers/: __init__.py  category_serializer.py  product_serializer.py
V2_curso/django_project/product/tests/: test_product_viewset.py
V2_curso/django_project/product/viewsets/: product_viewset.py
(+45 files in other folders)
